Add russian and new templates with the editing of everything

--- a/ksbc/templates/about/contact-us.html
+++ b/ksbc/templates/about/contact-us.html
@@ -6,10 +6,10 @@
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url('{% static 'img/breadcrumbs-bg.jpg' %}');">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>Contact Us</h2>
+        <h2>Связаться с нами</h2>
         <ol>
-        <li><a href="index.html">Home</a></li>
-        <li>Contact Us</li>
+        <li><a href="index.html">Главная страница</a></li>
+        <li>Связаться с нами</li>
         </ol>
     </div>
 </div><!-- End Breadcrumbs -->
@@ -21,7 +21,7 @@
             <div class="col-lg-6">
                 <div class="info-item  d-flex flex-column justify-content-center align-items-center">
                 <i class="bi bi-map"></i>
-                <h3>Our Address</h3>
+                <h3>Наш адрес</h3>
                 <p>600 North Bridge Road, #10-01 Parkview Square, Singapore, 188778</p>
                 </div>
             </div><!-- End Info Item -->
@@ -29,7 +29,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center">
                     <i class="bi bi-envelope"></i>
-                    <h3>Email Us</h3>
+                    <h3>Напишите нам</h3>
                     <p>contact@ksbc.sg</p>
                 </div>
             </div><!-- End Info Item -->
@@ -37,7 +37,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="info-item  d-flex flex-column justify-content-center align-items-center">
                     <i class="bi bi-telephone"></i>
-                    <h3>Call Us</h3>
+                    <h3>Позвоните нам</h3>
                     <p>+65 93874275</p>
                 </div>
             </div><!-- End Info Item -->
