--- a/ksbc/templates/about/our-structure.html
+++ b/ksbc/templates/about/our-structure.html
@@ -4,10 +4,10 @@
 {% block content %}
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-      <h2>Our Structure</h2>
+      <h2>Наша структура</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>Our Structure</li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+        <li>Наша структура</li>
       </ol>
     </div>
 </div><!-- End Breadcrumbs -->
@@ -18,34 +18,18 @@
         <ul class="nav nav-tabs row  g-2 d-flex">
             <li class="nav-item col-6">
                 <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#tab-1">
-                <h4>Organisational Chart (Executive level)</h4>
+                <h4>Организационная структура (руководящий уровень)</h4>
                 </a>
             </li><!-- End tab nav item -->
             <li class="nav-item col-6">
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
-                <h4>Organisational Chart (Trade)</h4>
+                <h4>Организационная структура (торговля)</h4>
                 </a><!-- End tab nav item -->
             </li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane active show" id="tab-1">
                 <div class="row">
-                    <div class="col-lg-12 order-1 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center"
-                        data-aos="fade-up" data-aos-delay="100">
-                        <h3>Voluptatem dignissimos provident</h3>
-                        <p class="fst-italic">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore
-                        magna aliqua.
-                        </p>
-                        <ul>
-                        <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                        <li><i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                        <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                            aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                            pariatur.</li>
-                        </ul>
-                    </div>
                     <div class="col-lg-12 order-2 order-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
                         <img src="{% static 'img/organisational-chart-2.jpg' %}" alt="" class="img-fluid">
                     </div>
@@ -54,23 +38,6 @@
 
             <div class="tab-pane" id="tab-2">
                 <div class="row">
-                    <div class="col-lg-12 order-1 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                        <h3>Neque exercitationem debitis</h3>
-                        <p class="fst-italic">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore
-                        magna aliqua.
-                        </p>
-                        <ul>
-                            <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                            <li><i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                            <li><i class="bi bi-check2-all"></i> Provident mollitia neque rerum asperiores dolores quos qui a.
-                                Ipsum neque dolor voluptate nisi sed.</li>
-                            <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                                aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                                pariatur.</li>
-                        </ul>
-                    </div>
                     <div class="col-lg-12 order-2 order-lg-2 text-center">
                         <img src="{% static 'img/organisational-chart-1.jpg' %}" alt="" class="img-fluid">
                     </div>
