--- a/ksbc/templates/membership/payment_successful.html
+++ b/ksbc/templates/membership/payment_successful.html
@@ -5,15 +5,25 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-            <h2>Membership</h2>
+            <h2>Оплата прошла успешно</h2>
             <ol>
-            <li><a href="{% url 'about:index' %}">Home</a></li>
-            <li>Membership</li>
+            <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+            <li>Оплата прошла успешно</li>
             </ol>
         </div>
     </div><!-- End Breadcrumbs -->
 
-    <div class="container home_msg">
-        <h1>Thanks for your order {{ username }}!</h1>
-      </div>
+    <section id="blog" class="blog">
+        <div class="container d-flex justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="100">
+            <div class="text-center col-lg-8">
+                <article class="blog-details">
+                    <h2 class="title">Оплата прошла успешно!
+                    </h2><br><br>
+                    <p>Теперь вы официально член организации!</p>
+                    <i class="bi bi-check-circle-fill"></i>
+                </article><!-- End blog post -->
+            </div>
+        </div>
+    </section><!-- End Blog Details Section -->
+
 {% endblock content %}
