--- a/ksbc/templates/users/logged_out.html
+++ b/ksbc/templates/users/logged_out.html
@@ -6,10 +6,10 @@
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Password Reset Sent</h2>
+      <h2>Сброс пароля отправлен</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>Password Reset Sent</li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+        <li>Сброс пароля отправлен</li>
       </ol>
 
     </div>
