--- a/ksbc/templates/users/password_reset_complete.html
+++ b/ksbc/templates/users/password_reset_complete.html
@@ -8,7 +8,7 @@
 
       <h2>Восстановление пароля завершено</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
         <li>Password Reset Complete</li>
       </ol>
 
