--- a/ksbc/templates/users/password_reset_form.html
+++ b/ksbc/templates/users/password_reset_form.html
@@ -6,10 +6,10 @@
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Password Reset</h2>
+      <h2>Восстановление пароля</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>Password Reset</li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+        <li>Восстановление пароля</li>
       </ol>
 
     </div>
@@ -44,7 +44,7 @@
                             </div>
             
                             <p class="text-black-50 mb-5 pt-5">
-                                Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.
+                                Забыли пароль? Введите свой адрес электронной почты ниже, и мы вышлем инструкции по настройке нового адреса электронной почты.
                             </p>
             
                             <form action='{% url 'users:reset_password' %}' method=POST>
