--- a/ksbc/templates/about/what-we-do.html
+++ b/ksbc/templates/about/what-we-do.html
@@ -5,10 +5,10 @@
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static '/img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-        <h2>What We Do</h2>
+        <h2>Наши услуги</h2>
         <ol>
-            <li><a href="{% url 'about:index' %}">Home</a></li>
-            <li>What We Do</li>
+            <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+            <li>Наши услуги</li>
         </ol>
     </div>
 </div>
@@ -20,25 +20,19 @@
         <div class="row position-relative">
             <div class="col-lg-7 about-img" style="background-image: url({% static 'img/about.jpg' %});"></div>
                 <div class="col-lg-7">
-                <h2>Consequatur eius et magnam</h2>
+
                 <div class="our-story">
-                    <h4>Est 2023</h4>
-                    <h3>Our Story</h3>
-                    <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem.
-                    Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur
-                    laudantium temporibus dicta minus dolor.</p>
+                    <h4>Наши услуги</h4>
+                    <h3>Выстраивание деловых связей</h3>
                     <ul>
-                        <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
-                        <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
-                        <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+                        <li><i class="bi bi-check-circle"></i> <span>Налаживание торговли, укрепление связей и улучшение жизни между Казахстаном и Сингапуром.</span></li><br>
+                        <li><i class="bi bi-check-circle"></i> <span>Способствовать росту, лидерству, инновациям и партнерству в Казахстане и Сингапуре.</span></li><br>
+                        <li><i class="bi bi-check-circle"></i> <span>Повысить прозрачность, доверие и инвестиции в частный сектор Казахстана.</span></li><br>
+                        <li><i class="bi bi-check-circle"></i> <span>Отстаивать точку зрения бизнеса по ключевым вопросам государственной политики.</span></li><br>
+                        <li><i class="bi bi-check-circle"></i> <span>Выступайте за корпоративное управление и защиту заинтересованных сторон.</span></li><br>
+                        <li><i class="bi bi-check-circle"></i> <span>Стимулировать процветание, представлять интересы бизнеса и укреплять членов организации.</span></li><br>
+                        <li><i class="bi bi-check-circle"></i> <span>Катализация экономического роста для своих членов и сообщества.</span></li><br>
                     </ul>
-                    <p>Vitae autem velit excepturi fugit. Animi ad non. Eligendi et non nesciunt suscipit repellendus porro in
-                    quo eveniet. Molestias in maxime doloremque.</p>
-                    
-                    <div class="watch-video d-flex align-items-center position-relative">
-                        <i class="bi bi-play-circle"></i>
-                        <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox stretched-link">Watch Video</a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -46,105 +40,71 @@
 </section>
 <!-- ======= End About Section ======= -->
 
-<!-- ======= Stats Counter Section ======= -->
-<section id="stats-counter" class="stats-counter section-bg">
-    <div class="container">
-        <div class="row gy-4">
-            <div class="col-lg-3 col-md-6">
-                <div class="stats-item d-flex align-items-center w-100 h-100">
-                    <i class="bi bi-emoji-smile color-blue flex-shrink-0"></i>
-                    <div>
-                        <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
-                        class="purecounter"></span>
-                        <p>Happy Clients</p>
-                    </div>
-                </div>
-            </div><!-- End Stats Item -->
-
-            <div class="col-lg-3 col-md-6">
-                <div class="stats-item d-flex align-items-center w-100 h-100">
-                    <i class="bi bi-journal-richtext color-orange flex-shrink-0"></i>
-                    <div>
-                        <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
-                        class="purecounter"></span>
-                        <p>Projects</p>
-                    </div>
-                </div>
-            </div><!-- End Stats Item -->
-
-            <div class="col-lg-3 col-md-6">
-                <div class="stats-item d-flex align-items-center w-100 h-100">
-                    <i class="bi bi-headset color-green flex-shrink-0"></i>
-                    <div>
-                        <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1"
-                        class="purecounter"></span>
-                        <p>Hours Of Support</p>
-                    </div>
-                </div>
-            </div><!-- End Stats Item -->
-
-            <div class="col-lg-3 col-md-6">
-                <div class="stats-item d-flex align-items-center w-100 h-100">
-                    <i class="bi bi-people color-pink flex-shrink-0"></i>
-                    <div>
-                        <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1"
-                        class="purecounter"></span>
-                        <p>Hard Workers</p>
-                    </div>
-                </div>
-            </div><!-- End Stats Item -->
-        </div>
-    </div>
-  </section><!-- End Stats Counter Section -->
-
-<!-- ======= Alt Services Section ======= -->
-<section id="alt-services" class="alt-services">
-    <div class="container" data-aos="fade-up">
-        <div class="row justify-content-around gy-4">
-            <div class="col-lg-6 img-bg" style="background-image: url(assets/img/alt-services.jpg);" data-aos="zoom-in"
-            data-aos-delay="100"></div>
-            <div class="col-lg-5 d-flex flex-column justify-content-center">
-                <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-                <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus
-                    laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
-
-                <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
-                    <i class="bi bi-easel flex-shrink-0"></i>
-                    <div>
-                    <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate
-                        non provident</p>
-                    </div>
-                </div><!-- End Icon Box -->
-
-                <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
-                    <i class="bi bi-patch-check flex-shrink-0"></i>
-                    <div>
-                    <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                        deleniti atque</p>
-                    </div>
-                </div><!-- End Icon Box -->
-
-                <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
-                    <i class="bi bi-brightness-high flex-shrink-0"></i>
-                    <div>
-                    <h4><a href="" class="stretched-link">Dine Pad</a></h4>
-                    <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus
-                        aut eligendi omnis</p>
-                    </div>
-                </div><!-- End Icon Box -->
-
-                <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
-                    <i class="bi bi-brightness-high flex-shrink-0"></i>
-                    <div>
-                    <h4><a href="" class="stretched-link">Tride clov</a></h4>
-                    <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur odit amet.
-                        Et eligendi</p>
-                    </div>
-                </div><!-- End Icon Box -->
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials section-bg">
+        <div class="container" data-aos="fade-up">
+            <div class="section-header">
+              <h2>Партнеры</h2>
             </div>
+            <section id='clients' class="clients">
+                <div class="container" data-aos="zoom-in">
+                    <div class="row">
+                        <div class="col-lg-1"></div>
+                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-8.png' %}" class="img-fluid" alt="">
+                        </div>
+                
+                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-3.jpg' %}" class="img-fluid" alt="">
+                        </div>
+                
+                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-4.jpg' %}" class="img-fluid" alt="">
+                        </div>
+                
+                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-5.jpg' %}" class="img-fluid" alt="">
+                        </div>
+                
+                        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-6.jpg' %}" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-lg-1"></div>
+                    </div>
+                </div>
+            </section>
         </div>
-    </div>
-</section><!-- End Alt Services Section -->
+    </section><!-- End Testimonials Section -->
+    
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials section-bg">
+        <div class="container" data-aos="fade-up">
+            <div class="section-header">
+              <h2>Стратегические партнеры</h2>
+            </div>
+            <section id='clients' class="clients">
+                <div class="container" data-aos="zoom-in">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-10.jpg' %}" class="img-fluid" alt="">
+                        </div>
+                
+                        <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-2.jpg' %}" class="img-fluid" alt="">
+                        </div>
+                
+                        <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-7.jpg' %}" class="img-fluid" alt="">
+                        </div>
+                
+                        <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+                            <img src="{% static 'img/partners/partner-9.png' %}" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </section><!-- End Testimonials Section -->
+
+
 {% endblock content %}
