--- a/ksbc/templates/events/past-events.html
+++ b/ksbc/templates/events/past-events.html
@@ -6,10 +6,10 @@
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-        <h2>Past Events</h2>
+        <h2>Прошедшие события</h2>
         <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>Past Events</li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+        <li>Прошедшие события</li>
         </ol>
     </div>
 </div><!-- End Breadcrumbs -->
@@ -36,7 +36,7 @@
                                 </p>
                                 <hr>
 
-                                <a href="" class="readmore stretched-link"><span>Read More</span><i
+                                <a href="{% url 'events:events-details' events_id=event.id %}" class="readmore stretched-link"><span>Подробнее</span><i
                                     class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
