--- a/ksbc/templates/includes/footer.html
+++ b/ksbc/templates/includes/footer.html
@@ -14,10 +14,9 @@
               <strong>Email:</strong> contact@ksbc.sg<br>
             </p>
             <div class="social-links d-flex mt-3">
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/100237562998768" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/ksbc.sg" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/kazakhstan-singapore-business-council" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div><!-- End footer info column-->
