--- a/ksbc/templates/includes/header.html
+++ b/ksbc/templates/includes/header.html
@@ -4,54 +4,75 @@
   <a href="{% url 'about:index' %}" class="logo d-flex align-items-center">
     <!-- Uncomment the line below if you also wish to use an image logo -->
     <!-- <img src="{% static 'img/logo.png' %}" alt=""> -->
-    <h1>KSBC<span>.</span></h1>
+    <img src='{% static 'img/logoksbc.png' %}'>
   </a>
 
   <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
   <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
   <nav id="navbar" class="navbar">
     <ul>
-      <li>
-        <a href="{% url 'about:index' %}">About Us</a>
-      </li>
-
-      <li>
-          <a href="{% url 'about:what-we-do' %}">What We Do</a>
-      </li>
-
-      <li>
-          <a href="{% url 'news:news' %}">News</a>
-      </li>
-
-      <li>
-          <a href="{% url 'membership:membership-list' %}">Membership</a>
-      </li>
-
-      <li>
-          <a href="{% url 'about:our-structure' %}">Our Structure</a>
-      </li>
-
       <li class="dropdown">
-        <a href="#"><span>Events</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+        <a href="#"><span>О KSBC</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
         <ul>
             <li>
-                <a href="{% url 'events:upcoming_events' %}">Upcoming Events</a>
+                <a href="{% url 'about:index' %}">Главная страница</a>
             </li>
             <li>
-                <a href="{% url 'events:past_events' %}">Past Events</a>
+                <a href="{% url 'about:mission' %}">Миссия</a>
+            </li>
+            <li>
+              <a href="{% url 'about:vision' %}">Видение</a>
+            </li>
+            <li>
+              <a href="{% url 'about:word-of-chairman' %}">Слова Основателя</a>
+            </li>
+            <li>
+              <a href="{% url 'about:board-directors' %}">Совет Директоров</a>
             </li>
         </ul>
       </li>
 
       <li>
-          <a href="{% url 'about:contact-us' %}">Contact Us</a>
+          <a href="{% url 'about:what-we-do' %}">Наши услуги</a>
+      </li>
+
+      <li>
+          <a href="{% url 'news:news' %}">Новости</a>
+      </li>
+
+      <li>
+          <a href="{% url 'membership:membership-list' %}">Членство</a>
+      </li>
+
+      <li>
+          <a href="{% url 'about:our-structure' %}">Наша структура</a>
+      </li>
+
+      <li class="dropdown">
+        <a href="#"><span>События</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+        <ul>
+            <li>
+                <a href="{% url 'events:upcoming_events' %}">Предстоящие события</a>
+            </li>
+            <li>
+                <a href="{% url 'events:past_events' %}">Прошедшие события</a>
+            </li>
+        </ul>
+      </li>
+
+      <li>
+        <a href="https://www.flickr.com/photos/198811983@N02/">Фото галерея</a>
+      </li>
+
+      <li>
+          <a href="{% url 'about:contact-us' %}">Свяжитесь с нами</a>
       </li>
 
       {% if user.is_authenticated %}
-        <li><a href="{% url 'membership:profile' %}" class="btn-get-started">Profile</a></li>
-        <li><a data-aos="fade-up" data-aos-delay="200" href="{% url 'users:logout' %}" class="btn-get-started">Logout</a></li>
+        <li><a href="{% url 'membership:profile' %}" class="btn-get-started">Профиль</a></li>
+        <li><a data-aos="fade-up" data-aos-delay="200" href="{% url 'users:logout' %}" class="btn-get-started">Выйти</a></li>
       {% else %}
-      <li><a data-aos="fade-up" data-aos-delay="200" href="{% url 'users:login' %}" class="btn-get-started">Login</a></li>
+      <li><a data-aos="fade-up" data-aos-delay="200" href="{% url 'users:login' %}" class="btn-get-started">Вход</a></li>
       {% endif %}
     </ul>
   </nav><!-- .navbar -->
