--- a/ksbc/templates/membership/payment_cancelled.html
+++ b/ksbc/templates/membership/payment_cancelled.html
@@ -5,15 +5,24 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-            <h2>Payment Declined</h2>
+            <h2>Платеж отклонен</h2>
             <ol>
-            <li><a href="{% url 'about:index' %}">Home</a></li>
-            <li>Payment Declined</li>
+            <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+            <li>Платеж отклонен</li>
             </ol>
         </div>
     </div><!-- End Breadcrumbs -->
 
-    <div class="container home_msg">
-        <h1>Your payment didn't go through :(</h1>
-    </div>
+    <section id="blog" class="blog">
+        <div class="container d-flex justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="100">
+            <div class="text-center col-lg-8">
+                <article class="blog-details">
+                    <h2 class="title">Оплата не удалась!
+                    </h2><br><br>
+                    <p>Пожалуйста повторите попытку!</p>
+                    <i class="bi bi-x-circle-fill "></i>
+                </article><!-- End blog post -->
+            </div>
+        </div>
+    </section><!-- End Blog Details Section -->
 {% endblock content %}
