--- a/ksbc/templates/news/news_list.html
+++ b/ksbc/templates/news/news_list.html
@@ -6,10 +6,10 @@
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
-        <h2>News</h2>
+        <h2>Новости</h2>
         <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>News</li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+        <li>Новости</li>
         </ol>
     </div>
 </div><!-- End Breadcrumbs -->
@@ -35,7 +35,7 @@
                             </p>
                             <hr>
 
-                            <a href="" class="readmore stretched-link"><span>Read More</span><i
+                            <a href="{% url 'news:news-details' news.pk %}" class="readmore stretched-link"><span>Подробнее</span><i
                                 class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
