--- a/ksbc/templates/users/login.html
+++ b/ksbc/templates/users/login.html
@@ -6,10 +6,10 @@
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Login</h2>
+      <h2>Вход</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>Login</li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+        <li>Вход</li>
       </ol>
 
     </div>
@@ -43,7 +43,7 @@
                                 style="width: 100%;" alt="logo">
                             </div>
             
-                            <p class="text-black-50 mb-5 pt-5">Please enter your email and password!</p>
+                            <p class="text-black-50 mb-5 pt-5">Пожалуйста, введите адрес электронной почты и пароль!</p>
             
                             <form action='{% url 'users:login' %}' method=POST>
                                 {% csrf_token %}
@@ -66,14 +66,14 @@
                                     </div>
                                 {% endfor %}
             
-                                <p class="small mb-5 pb-lg-2"><a class="text-black-50" href="{% url 'users:reset_password' %}">Forgot password?</a></p>
+                                <p class="small mb-5 pb-lg-2"><a class="text-black-50" href="{% url 'users:reset_password' %}">Забыли пароль?</a></p>
             
-                                <input type='submit' value='Login' class='btn btn-outline-danger btn-lg px-5'>
+                                <input type='submit' value='Войти' class='btn btn-outline-danger btn-lg px-5'>
                                 </form>
                         </div>
             
                         <div>
-                            <p class="mb-0">Don't have an account? <a href="{% url 'users:signup' %}" class="text-black-50 fw-bold">Sign Up</a>
+                            <p class="mb-0">У вас нет аккаунта? <a href="{% url 'users:signup' %}" class="text-black-50 fw-bold">Зарегистрироваться</a>
                             </p>
                         </div>
                     </div>
