--- a/ksbc/templates/users/password_reset_confirm.html
+++ b/ksbc/templates/users/password_reset_confirm.html
@@ -7,10 +7,10 @@
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Enter new password</h2>
+      <h2>Введите новый пароль</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>Enter new password</li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+        <li>Введите новый пароль</li>
       </ol>
 
     </div>
