--- a/ksbc/templates/users/signup.html
+++ b/ksbc/templates/users/signup.html
@@ -6,10 +6,10 @@
 <div class="breadcrumbs d-flex align-items-center" style="background-image: url({% static 'img/breadcrumbs-bg.jpg' %});">
     <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-      <h2>Sign Up</h2>
+      <h2>Зарегистрироваться</h2>
       <ol>
-        <li><a href="{% url 'about:index' %}">Home</a></li>
-        <li>Sign Up</li>
+        <li><a href="{% url 'about:index' %}">Главная страница</a></li>
+        <li>Зарегистрироваться</li>
       </ol>
 
     </div>
@@ -45,7 +45,7 @@
                                 style="width: 100%;" alt="logo">
                             </div>
             
-                            <p class="text-black-50 mb-5 pt-5">Please fill out the form to register!</p>
+                            <p class="text-black-50 mb-5 pt-5">Пожалуйста, заполните форму для регистрации!</p>
                             
                             <form action='{% url 'users:signup' %}' method=POST>
                                 {% csrf_token %}
